--- a/gb/20/1/4/n11767524.md
+++ b/gb/20/1/4/n11767524.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ylnu2943/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ylnu2943/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ylnu2943/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ylnu2943/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“非常有教育意义”跨国公司经理赞美神韵</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/200104021314100055-600x400.jpg" />
 <h6>1月3日晚，美国跨国石油公司PhillipsP66的调度经理Abraham Castro观看了神韵环球艺术团在旧金山歌剧院的演出。（周容／大纪元）                               
 </h6>
 <hr>
-	<p>【大纪元2020年01月04日讯】（大纪元记者周容美国旧金山报导）2020年1月3日晚，<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>（San Francisco Opera House）进行了第五场演出。美国跨国石油公司PhillipsP66的调度经理Abraham Castro与母亲和太太一同前往，壮丽辉煌的神传文化让他们赞叹不已。</p>
-<p>“<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>精湛绝伦，演员的技巧无与伦比”，Castro赞叹道，“他们一定经过了长期的训练，所有的舞蹈都是那么流畅、精准，没有半点差错。”</p>
-<p>神韵展现了真正的中国传统文化，并以复兴五千年神传文化为己任。Castro感佩中华文化的博大精深，他表示，“非常欣赏神韵演员的<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>，舞蹈编排得非常好看。神韵舞蹈演绎了中华文化和中国人的生活，引人入胜。”</p>
+	<p>【大纪元2020年01月04日讯】（大纪元记者周容美国旧金山报导）2020年1月3日晚，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>（San Francisco Opera House）进行了第五场演出。美国跨国石油公司PhillipsP66的调度经理Abraham Castro与母亲和太太一同前往，壮丽辉煌的神传文化让他们赞叹不已。</p>
+<p>“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>精湛绝伦，演员的技巧无与伦比”，Castro赞叹道，“他们一定经过了长期的训练，所有的舞蹈都是那么流畅、精准，没有半点差错。”</p>
+<p>神韵展现了真正的中国传统文化，并以复兴五千年神传文化为己任。Castro感佩中华文化的博大精深，他表示，“非常欣赏神韵演员的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>，舞蹈编排得非常好看。神韵舞蹈演绎了中华文化和中国人的生活，引人入胜。”</p>
 <p>对于节目中表现一个兄弟因为信仰而遭到中共迫害的故事，Castro感到愤慨。“用娱乐的方式讲述了发生在中国的迫害，那里到底发生了什么，这非常有教育意义。”</p>
-<p>他惊叹于神韵的<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>运用，表示这种手法拓宽了时空，让不同时空的人物得以复活，“神韵的天幕非常有趣，那些演员从舞台上跳下去，又从天幕上出现，这个技术真是独具匠心。”</p>
+<p>他惊叹于神韵的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>运用，表示这种手法拓宽了时空，让不同时空的人物得以复活，“神韵的天幕非常有趣，那些演员从舞台上跳下去，又从天幕上出现，这个技术真是独具匠心。”</p>
 <p>他表示，神韵的广告非常有效，他看了精彩的广告后就想去看，也非常高兴自己去看了演出，“神韵真的就像节目主持人说的那样，是神在演出，你可以从他们脸上的表情和舞蹈动作看出来，非常美。”</p>
 <p>主持人的解说令他感到引人入胜，“我喜欢主持人的解说，对于不了解这个历史的人来说很有帮助。在每个节目间插入的介绍很生动有趣。”</p>
 <p>他说，神韵的节目高贵典雅，很有娱乐性，“非常值得看。”</p>
@@ -20,38 +20,37 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/1/3/n11765290.md#1">跨国公司副董事长：神韵演员技艺卓越超群</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/1/3/n11765388.md#1">神韵展示对神虔诚的信仰 蒙特利尔观众动容</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/1/3/n11765533.md#1">观神韵是恩赐 带给人希望 酒庄老板赞叹</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/1/3/n11765564.md#1">“不容错过” VISA公司IT总监赞神韵是杰作</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/1/3/n11765583.md#1">“要坚守传统” 三菱电机主管看神韵受启发</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/1/3/n11765744.md#1">“神韵是神的使者”牙医院长心灵被抚慰</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/3/n11765290.md#1">跨国公司副董事长：神韵演员技艺卓越超群</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/3/n11765388.md#1">神韵展示对神虔诚的信仰 蒙特利尔观众动容</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/3/n11765533.md#1">观神韵是恩赐 带给人希望 酒庄老板赞叹</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/3/n11765564.md#1">“不容错过” VISA公司IT总监赞神韵是杰作</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/3/n11765583.md#1">“要坚守传统” 三菱电机主管看神韵受启发</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/3/n11765744.md#1">“神韵是神的使者”牙医院长心灵被抚慰</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/ylnu2943/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/5/n10364709.md#1" target="_blank">修炼法轮功的中共军官们控告江泽民</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/1/n11693550.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/8/n12013466.md#1">台染疫男童的9接触者有症状 部分检验结果出炉</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12011929.md#1">【一线采访】趁解封赶紧走 武汉数万人出城</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/8/n12012723.md#1">任志强被调查 传需向中南海交代</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/6/n12009114.md#1">【最新疫情4.7】美考虑暂停对世卫的捐款</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12012172.md#1">【最新疫情4.8】川普再批世卫：故意淡化疫情</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12011319.md#1">《蝙蝠侠》男星班迪特 因中共肺炎并发症去世</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/6/n12009067.md#1">港歌手关淑怡退出演艺圈：见识最丑陋一面</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12012050.md#1">脸书帖文谈中共病毒名称 黄明志反击五毛围攻</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/5/n12005827.md#1">美国天后赞台湾防疫 网红讽中共：有钱买不到</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12009463.md#1">苏志燮亲自宣布结婚 还捐款帮助弱势儿童</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/2/n11998489.md#1">庚子流年卦 无妄卦示现2020时局</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/6/n12008426.md#1">两个现代人从地府带回来的信息</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12010421.md#1">疫情下行善 美暖男在超市为30名陌生人付账</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/3/27/n11979695.md#1">古今记载里的“另外时空”（二）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ylnu2943/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ylnu2943/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/4/n11767524.htm">“非常有教育意义”跨国公司经理赞美神韵</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/4/n11767524.htm">“非常有教育意义”跨国公司经理赞美神韵</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ylnu2943/djy/blob/master/gb/20/1/4/n11767524.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ylnu2943/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ylnu2943/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/1/4/n11767524.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
